# yicas

./: ProjectHome.md  README.md
Yicas/: .project  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  proyecto2.glade  proyecto2.gladep
Yicas/autom4te.cache/: output.0  traces.0
Yicas/po/: Makefile  Makefile.in
Yicas/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c  proyecto2
Yicas/src/.deps/: callbacks.P  interface.P  main.P  support.P
Yicas/windows/: COPYING.lnk  INSTALL.lnk  Makefile  Makefile.in  aclocal.m4  config.guess.lnk  config.h  config.status  config.sub.lnk  configure  install-sh.lnk  missing.lnk  proyecto2.glade  proyecto2.gladep
Yicas/windows/autom4te.cache/: output.0  requests  traces.0
Yicas/windows/devcpp/: config.h  proyecto2.dev
Yicas/windows/msvc/: config.h  proyecto2.dsp  proyecto2.dsw
Yicas/windows/po/: Makefile  Makefile.in
Yicas/windows/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c
Yicas/windows/src/.deps/: callbacks.P  interface.P  main.P  support.P
doc/: informe.odt
